fix s in last name

--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Carol William's Website</title>
+    <title>Carol Williams's Website</title>
 </head>
 <body>
 
-    <h1>This is Carol William's future website.</h1> 
+    <h1>This is Carol Williams's future website.</h1> 
 
 </body>
 </html>
