--- a/index.html
+++ b/index.html
@@ -3,11 +3,72 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Carol Williams's Website</title>
+    <title>Carol Williams - Your Portland Broker</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet"> 
 </head>
 <body>
+    <header>
+        <div class="container">
+            <h1>Carol Williams</h1>
+            <h2>Your Portland Broker</h2>
+        </div>
+    </header>
 
-    <h1>This is Carol Williams's future website.</h1> 
+    <main>
+        <section class="hero">
+            <div class="container">
+                <p>Finding your dream home in Portland, simplified.</p>
+                <a href="#contact" class="button">Contact Carol</a> 
+            </div>
+        </section>
 
+        <section class="about">
+            <div class="container">
+                <h2>About Carol</h2>
+                <p>With over [Number] years of experience in the Portland real estate market, Carol Williams is dedicated to providing personalized service and expert guidance to help you achieve your real estate goals.  Whether you're buying or selling, Carol's in-depth knowledge and commitment to client satisfaction ensure a smooth and successful transaction.</p>
+            </div>
+        </section>
+
+        <section class="services">
+            <div class="container">
+                <h2>Services</h2>
+                <ul>
+                    <li>Buying & Selling Residential Properties</li>
+                    <li>Condominiums & Townhouses</li>
+                    <li>Investment Properties</li>
+                    <li>Relocation Services</li>
+                    <li>[Add other services as needed]</li>
+                </ul>
+            </div>
+        </section>
+
+        <section class="listings">
+            <div class="container">
+                <h2>Current Listings</h2>
+                <p>View Carol's current listings on [Link to her listings website e.g., Zillow, Redfin, etc.]</p> 
+                <a href="[Link to listings]" class="button">View Listings</a>
+            </div>
+        </section>
+
+        <section class="contact" id="contact">
+            <div class="container">
+                <h2>Contact Carol</h2>
+                <p>
+                    <a href="tel:+15038109189">Phone: (503) 810-9189</a><br> 
+                    <a href="mailto:carol@myportlandbroker.com">Email: carol@myportlandbroker.com</a> 
+                </p>
+                <p>[Optional: Add a contact form here]</p> 
+            </div>
+        </section>
+    </main>
+
+    <footer>
+        <div class="container">
+            <p>&copy; 2025 Carol Williams - myportlandbroker.com</p>
+        </div>
+    </footer>
 </body>
 </html>
