logo and finalized updates

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 </head>
 <body>
     <header>
+        <div class="logo">
+            <img src="images/logo.png" alt="Carol Williams Logo">
+        </div>
         <div class="container">
             <h1>Carol Williams</h1>
             <h2>Your Portland Broker</h2>
@@ -28,7 +31,7 @@
         <section class="about">
             <div class="container">
                 <h2>About Carol</h2>
-                <p>With over [Number] years of experience in the Portland real estate market, Carol Williams is dedicated to providing personalized service and expert guidance to help you achieve your real estate goals.  Whether you're buying or selling, Carol's in-depth knowledge and commitment to client satisfaction ensure a smooth and successful transaction.</p>
+                <p>As a principal broker with over 20 years of experience in the Portland real estate market, Carol Williams is dedicated to providing exceptional service and achieving your real estate goals. Her deep understanding of the local market, combined with her commitment to personalized attention, ensures a smooth and successful experience whether you're buying, selling, or investing. References are available upon request.</p>
             </div>
         </section>
 
@@ -36,11 +39,12 @@
             <div class="container">
                 <h2>Services</h2>
                 <ul>
-                    <li>Buying & Selling Residential Properties</li>
-                    <li>Condominiums & Townhouses</li>
+                    <li>Serving Buyers</li>
+                    <li>Serving Sellers</li>
                     <li>Investment Properties</li>
-                    <li>Relocation Services</li>
-                    <li>[Add other services as needed]</li>
+                    <li>Commercial Real Estate</li>
+                    <li>Transaction Coordinating</li>
+                    <li>Individual Fixed-Price Services</li>
                 </ul>
             </div>
         </section>
@@ -48,8 +52,8 @@
         <section class="listings">
             <div class="container">
                 <h2>Current Listings</h2>
-                <p>View Carol's current listings on [Link to her listings website e.g., Zillow, Redfin, etc.]</p> 
-                <a href="[Link to listings]" class="button">View Listings</a>
+                <p>View Carol's current listings on Zillow:</p> 
+                    <a href="https://www.zillow.com/profile/CarolRealtor" class="button" target="_blank">View Listings</a>
             </div>
         </section>
 
@@ -58,9 +62,8 @@
                 <h2>Contact Carol</h2>
                 <p>
                     <a href="tel:+15038109189">Phone: (503) 810-9189</a><br> 
-                    <a href="mailto:carol@myportlandbroker.com">Email: carol@myportlandbroker.com</a> 
+                    <a href="mailto:carolrealtor@yahoo.com">Email: carolrealtor@yahoo.com</a> 
                 </p>
-                <p>[Optional: Add a contact form here]</p> 
             </div>
         </section>
     </main>
