Add "Created by" in footer

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2025 Carol Williams - myportlandbroker.com</p>
+                <p>&copy; 2025 Carol Williams - myportlandbroker.com | <a href="https://bergerj.com"> Created by Jacob Berger</a></p>
         </div>
     </footer>
 </body>
