--- a/index.html
+++ b/index.html
@@ -1,77 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Carol Williams - Your Portland Broker</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet"> 
-</head>
-<body>
-    <header>
-        <div class="logo">
-            <img src="images/logo.png" alt="Carol Williams Logo">
-        </div>
-        <div class="container">
-            <h1>Carol Williams</h1>
-            <h2>Your Portland Broker</h2>
-        </div>
-    </header>
-
-    <main>
-        <section class="hero">
-            <div class="container">
-                <p>Finding your dream home in Portland, simplified.</p>
-                <a href="#contact" class="button">Contact Carol</a> 
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Carol Williams - Your Portland Broker</title>
+        <link rel="stylesheet" href="style.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet"> 
+    </head>
+    <body>
+        <header>
+            <div class="logo">
+                <img src="images/logo.png" alt="Carol Williams Logo">
             </div>
-        </section>
-
-        <section class="about">
             <div class="container">
-                <h2>About Carol</h2>
-                <p>As a principal broker with over 20 years of experience in the Portland real estate market, Carol Williams is dedicated to providing exceptional service and achieving your real estate goals. Her deep understanding of the local market, combined with her commitment to personalized attention, ensures a smooth and successful experience whether you're buying, selling, or investing. References are available upon request.</p>
+                <h1>Carol Williams</h1>
+                <h2>Your Portland Broker</h2>
             </div>
-        </section>
+        </header>
 
-        <section class="services">
-            <div class="container">
-                <h2>Services</h2>
-                <ul>
-                    <li>Serving Buyers</li>
-                    <li>Serving Sellers</li>
-                    <li>Investment Properties</li>
-                    <li>Commercial Real Estate</li>
-                    <li>Transaction Coordinating</li>
-                    <li>Individual Fixed-Price Services</li>
-                </ul>
-            </div>
-        </section>
+        <main>
+            <section class="hero">
+                <div class="container">
+                    <p>Finding your dream home in Portland, simplified.</p>
+                    <a href="#contact" class="button">Contact Carol</a> 
+                </div>
+            </section>
 
-        <section class="listings">
-            <div class="container">
-                <h2>Current Listings</h2>
-                <p>View Carol's current listings on Zillow:</p> 
+            <section class="about">
+                <div class="container">
+                    <h2>About Carol</h2>
+                    <p>As a principal broker with over 20 years of experience in the Portland real estate market, Carol Williams is dedicated to providing exceptional service and achieving your real estate goals. Her deep understanding of the local market, combined with her commitment to personalized attention, ensures a smooth and successful experience whether you're buying, selling, or investing. References are available upon request.</p>
+                </div>
+            </section>
+
+            <section class="services">
+                <div class="container">
+                    <h2>Services</h2>
+                    <ul>
+                        <li>Serving Buyers</li>
+                        <li>Serving Sellers</li>
+                        <li>Investment Properties</li>
+                        <li>Commercial Real Estate</li>
+                        <li>Transaction Coordinating</li>
+                        <li>Individual Fixed-Price Services</li>
+                    </ul>
+                </div>
+            </section>
+
+            <section class="listings">
+                <div class="container">
+                    <h2>Current Listings</h2>
+                    <p>View Carol's current listings on Zillow:</p> 
                     <a href="https://www.zillow.com/profile/CarolRealtor" class="button" target="_blank">View Listings</a>
-            </div>
-        </section>
+                </div>
+            </section>
 
-        <section class="contact" id="contact">
+            <section class="contact" id="contact">
+                <div class="container">
+                    <h2>Contact Carol</h2>
+                    <p>
+                        <a href="tel:+15038109189">Phone: (503) 810-9189</a><br> 
+                        <a href="mailto:carolrealtor@yahoo.com">Email: carolrealtor@yahoo.com</a> 
+                    </p>
+                </div>
+            </section>
+        </main>
+
+        <footer>
             <div class="container">
-                <h2>Contact Carol</h2>
-                <p>
-                    <a href="tel:+15038109189">Phone: (503) 810-9189</a><br> 
-                    <a href="mailto:carolrealtor@yahoo.com">Email: carolrealtor@yahoo.com</a> 
-                </p>
+                <p>&copy; 2025 Carol Williams - myportlandbroker.com | <a href="https://bergerj.com" target="_blank" rel="noopener noreferrer"> Created by Jacob Berger</a></p>
             </div>
-        </section>
-    </main>
-
-    <footer>
-        <div class="container">
-                <p>&copy; 2025 Carol Williams - myportlandbroker.com | <a href="https://bergerj.com"> Created by Jacob Berger</a></p>
-        </div>
-    </footer>
-</body>
+        </footer>
+    </body>
 </html>
